packages section was seperated into new page and few changes are applied

--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,10 @@ form label:hover {
   background: #eee;
 }
 
+#packages {
+  padding-top: 10em;
+}
+
 .packages .box-container {
   display: -ms-grid;
   display: grid;
