--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ section {
   color: black;
   font-weight: bolder;
 }
+.header .logo:hover {
+  color: green;
+}
 .wrapper1 {
   margin-left: auto;
   margin-right: auto;
