--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  text-transform: capitalize;
   transition: 0.2s linear;
 }
 html {
@@ -17,7 +16,10 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 5rem;
 }
-
+:root{
+  --btn-hoverColor:#fff;
+  --btn-hoverBg:#000;
+}
 section {
   padding: 5rem 9%;
 }
@@ -29,13 +31,18 @@ section {
   cursor: pointer;
   background: none;
   font-size: 1.7rem;
+  font-weight:600;
   padding: 1rem 3rem;
   border-radius: 40px;
+  text-transform:capitalize;
+  transition:0.7s ease-in-out;
 }
+
 .btn:hover {
-  background: black;
-  color: white;
+  background:var(--btn-hoverBg);
+  color: var(--btn-hoverColor);
 }
+
 .heading {
   text-align: center;
   margin-bottom: 2.5rem;
@@ -129,7 +136,8 @@ section {
 .btn1 button[type="submit"] {
   background-color: transparent;
   font-size: 15px;
-  font-weight: 500;
+  cursor:pointer;
+  font-weight: 600;
 }
 
 i {
@@ -137,12 +145,15 @@ i {
 }
 
 .header .navbar a {
-  margin-left: 2rem;
-  font-size: 1.7rem;
+  margin:0 1.5rem;
+  font-size: 2rem;
+  font-weight:500;
+  text-transform:capitalize;
   color: black;
 }
 .header .navbar a:hover {
   color: green;
+
 }
 .header .navbar #nav-close {
   font-size: 5rem;
@@ -243,8 +254,11 @@ form label:hover {
 }
 .home .content span {
   font-size: 4rem;
+  text-transform:capitalize;
+  font-weight: 600;
   color: black;
 }
+
 .home .content h3 {
   font-size: 6rem;
   color: green;
@@ -254,7 +268,7 @@ form label:hover {
 .home .content p {
   line-height: 2;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   padding: 1rem 0;
 }
 .category .box-container {
@@ -277,6 +291,7 @@ form label:hover {
 }
 .category .box-container .box h3 {
   font-size: 2rem;
+  text-transform:capitalize;
   color: #219150;
 }
 
@@ -305,6 +320,7 @@ form label:hover {
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
+  transition:0.6s ease-in;
 }
 
 .packages .box-container .box:hover {
@@ -383,6 +399,7 @@ form label:hover {
   -ms-grid-columns: (minmax(25rem, 1fr)) [auto-fit];
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 1.5rem;
+  text-transform:capitalize;
 }
 
 .footer .box-container .box h3 {
@@ -423,7 +440,6 @@ form label:hover {
 .footer .credit span {
   color: #219150;
 }
-
 @media (max-width: 1200px) {
   .header {
     padding: 2rem;
